syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package = "/olo_service/generated";

service OLO {

  rpc helloUser(helloUserRequest) returns (helloUserResponse) {
    option (google.api.http) = {
      get: "/api/olo/sayHello"
    };
  }

  rpc GetAllWidgets (GetWidgetsRequest) returns (GetWidgetsResponse){
    option (google.api.http) = {
      get: "/api/olo/getAllWidgets"
    };
  }

  rpc AddWidgetForUser (AddWidgetForUserRequest) returns (AddWidgetForUserResponse){
    option (google.api.http).post = "/api/olo/addWidgetForUser";
    option (google.api.http).body = "*";
  }

  rpc GetUserWidgets (GetWidgetsRequest) returns (GetWidgetsResponse){
    option (google.api.http) = {
      get: "/api/olo/getUserWidgets"
    };
  }

  rpc GetAllArticles (GetAllArticlesRequest) returns (GetAllArticlesResponce) {
    option (google.api.http) = {
      get: "/api/olo/articles"
    };
  }
  rpc AddArticleForUser (AddArticleForUserRequest) returns (AddArticleForUserResponse){
    option (google.api.http).post = "/api/olo/addArticleForUser";
    option (google.api.http).body = "*";
  }

  rpc GetUsersArticles (GetAllArticlesRequest) returns (GetAllArticlesResponce){
    option (google.api.http) = {
      get: "/api/olo/getUserArticles"
    };
  }
}
message GetAllArticlesRequest {}

message GetAllArticlesResponce {
  repeated Article articles = 1;
}

message helloUserRequest {}

message helloUserResponse {
  string message = 1;
}

message AddWidgetForUserRequest {
  int64 widgetId = 1;
}

message AddWidgetForUserResponse {
  string response = 1;
}

message AddArticleForUserRequest {
  int64 articleId = 1;
}

message AddArticleForUserResponse {
  string response = 1;
}


message GetWidgetsRequest {}

message GetWidgetsResponse {
  repeated Widget widgets = 1;
}

message Widget {
  uint64 id = 1;
  string description = 2;
}
message Article {
  uint64 id = 1;
  string header = 2;
}